# protobuf-mysql

./: CMakeLists.txt  INSTALL  MysqlDescriptor.pb.cc  MysqlDescriptor.pb.h  MysqlDescriptor.proto  MysqlError.h  MysqlGenerator.cpp  MysqlGenerator.h  MysqlInterface.cpp  MysqlInterface.h  README.md
test/: CMakeLists.txt  INSTALL  MysqlGenerator_unittest.cpp  MysqlInterface_unittest.cpp  README.md  create.sh
test/proto/: INSTALL  test.pb.cc  test.pb.h  test.proto
